Filled in Home & About

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,7 +1,49 @@
 {% extends 'base.html' %} {% block content %}
-<h1>About</h1>
-<br />
-<p1
-  >SynBio Source is a repository containing datasets for Synthetic Biology.</p1
->
+<!DOCTYPE html>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<main>
+  
+      <div class="p-5 mb-4 bg-light rounded-3 text-center">
+        <div class="container-fluid py-5">
+          <h1>About Us</h1>
+          <p>This is an open source repository for Synthetic Biology datasets.</p>
+        </div>
+      </div>
+  
+      <div class="row align-items-md-stretch">
+        <div class="col-md-6">
+          <div class="h-100 p-5 text-white bg-dark rounded-3">
+            <h2>Our Creation</h2>
+            <p class="placeholder-wave">
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="h-100 p-5 bg-light border rounded-3">
+            <h2>Note from our Founding Father</h2>
+            <p class="placeholder-wave">
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+              <span class="placeholder col-12"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <footer class="pt-5 my-5 text-muted border-top">
+        Created by Aatish Dhawan &middot; 2024
+      </footer>
+    </div>
+  </main>
+</html>
 {% endblock %}
