--- a/website/templates/member_zone.html
+++ b/website/templates/member_zone.html
@@ -9,6 +9,4 @@
 <p1>You must be logged in to view this page.</p1>
 <a href="{% url 'login' %}">Login Here</a>
 
-{% endif %}
-
-{% endblock %}
+{% endif %} {% endblock %}
