Fixed Home Button

--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-dark" style="background-color: #412a56">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index">SynBio Source</a>
+    <a class="navbar-brand" href="{% url 'index' %}">SynBio Source</a>
     <button
       class="navbar-toggler"
       type="button"
