Added Dataset to Memberzone

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -46,5 +46,11 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <!-- use version 0.20.1 -->
+    <!-- use version 0.20.1 -->
+    <script
+      lang="javascript"
+      src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"
+    ></script>
   </body>
 </html>
