--- a/website/templates/member_zone.html
+++ b/website/templates/member_zone.html
@@ -1,12 +1,120 @@
 {% extends 'base.html' %} {% block content %} {% if user.is_authenticated %}
+<!-- Scripts -->
+<script>
+  function exportData() {
+    // Gets the selected rows.
+    var selectedRows = $("#license_data_table").bootstrapTable("getSelections");
+
+    // Checks if there are selected rows.
+    if (selectedRows.length === 0) {
+      alert("Please select at least one row to export.");
+      return;
+    }
+
+    // Converts selected rows to a worksheet.
+    var worksheet = XLSX.utils.json_to_sheet(selectedRows);
+
+    // Creates a new workbook.
+    var workbook = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(workbook, worksheet, "SelectedRows");
+
+    // Writes the workbook to an Excel file.
+    XLSX.writeFile(workbook, "selected_rows.xlsx");
+  }
+</script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Bootstrap Table JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-table/dist/bootstrap-table.min.js"></script>
+
+<!-- Style -->
+<style>
+  .bootstrap-table .pagination-detail {
+    margin-bottom: 10px; /* Adjust the space below the items per page dropdown */
+  }
+
+  .bootstrap-table .pagination {
+    margin-top: 10px; /* Adjust the space above the pagination controls */
+  }
+</style>
+
+<!-- Body -->
 <h1>Member Zone</h1>
 <br />
-<p1>Welcome to the member's only zone.</p1>
-
+<p1
+  >Welcome to the member's only zone where you can view the available license
+  data.</p1
+>
+<br />
+<br />
+<p1>Hit the button to export the data to an Excel file. </p1>
+<button type="button" class="btn btn-success" onclick="exportData()">
+  Excel
+</button>
+<br />
+<br />
+<table
+  id="license_data_table"
+  border="1"
+  data-toggle="table"
+  data-sortable="true"
+  data-pagination="true"
+  data-page-size="10"
+  data-page-list="[10, 25, 50, 100, ALL]"
+  data-search="true"
+  class="table table-hover sortable"
+>
+  <thead>
+    <tr>
+      <th scope="col" data-sortable="true">ID</th>
+      <th scope="col" data-sortable="true">First Name</th>
+      <th scope="col" data-sortable="true">Last Name</th>
+      <th scope="col" data-sortable="true">Date of Birth</th>
+      <th scope="col" data-sortable="true">Place of Birth</th>
+      <th scope="col" data-sortable="true">Gender</th>
+      <th scope="col" data-sortable="true">Date of Issue</th>
+      <th scope="col" data-sortable="true">Date of Expiry</th>
+      <th scope="col" data-sortable="true">Issuing Authority</th>
+      <th scope="col" data-sortable="true">License Number</th>
+      <th scope="col" data-sortable="true">Address</th>
+      <th scope="col" data-sortable="true">Dataset</th>
+      <th data-checkbox="true"></th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for entry in data %}
+    <tr>
+      <td>{{ entry.0 }}</td>
+      <td>{{ entry.1 }}</td>
+      <td>{{ entry.2 }}</td>
+      <td>{{ entry.3 }}</td>
+      <td>{{ entry.4 }}</td>
+      <td>{{ entry.5 }}</td>
+      <td>{{ entry.6 }}</td>
+      <td>{{ entry.7 }}</td>
+      <td>{{ entry.8 }}</td>
+      <td>{{ entry.9 }}</td>
+      <td>{{ entry.10 }}</td>
+      <td>{{ entry.11 }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+<script>
+  $(document).ready(function () {
+    $("#license_data_table").bootstrapTable();
+  });
+</script>
 {% else %}
 <h1>Nice Try</h1>
 <br />
 <p1>You must be logged in to view this page.</p1>
 <a href="{% url 'login' %}">Login Here</a>
-
 {% endif %} {% endblock %}
