--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -7,7 +7,7 @@
       <div class="p-5 mb-4 bg-light rounded-3 text-center">
         <div class="container-fluid py-5">
           <h1>About Us</h1>
-          <p>This is an open source repository for Synthetic Biology datasets.</p>
+          <p>This is an open source repository for Synthetic Biology datasets. That being said though there are no synthetic biology datasets, just some fake license data, as this web-app is just a test run for the actual SynBio Source website that will be made.</p>
         </div>
       </div>
   
