--- a/website/templates/available_datasets.html
+++ b/website/templates/available_datasets.html
@@ -2,7 +2,9 @@
 <!-- Scripts -->
 <script>
   function exportData() {
-    var selectedRows = $("#license_data_table").bootstrapTable("getSelections");
+    var selectedRows = $("#dataset_registry_table").bootstrapTable(
+      "getSelections"
+    );
 
     // Makes sure some rows are selected.
     if (selectedRows.length === 0) {
@@ -12,18 +14,23 @@
 
     // Specify the headers.
     var headers = [
-      "ID",
-      "First Name",
-      "Last Name",
-      "Date of Birth",
-      "Place of Birth",
-      "Gender",
-      "Date of Issue",
-      "Date of Expiry",
-      "Issuing Authority",
-      "License Number",
-      "Address",
-      "Dataset",
+      "Dataset ID",
+      "Dataset Name",
+      "Total Entries",
+      "Corrupt?",
+      "Corruption Percentage",
+      "Creation Time",
+      "First Name Corruption",
+      "Last Name Corruption",
+      "Date of Birth Corruption",
+      "Place of Birth Corruption",
+      "Gender Corruption",
+      "Date of Issue Corruption",
+      "Date of Expiry Corruption",
+      "Issuing Authority Corruption",
+      "License Number Corruption",
+      "Address Corruption",
+      "Additional Metadata",
     ];
 
     // Create a worksheet with just the headers.
@@ -40,7 +47,7 @@
     XLSX.utils.book_append_sheet(workbook, worksheet, "SelectedRows");
 
     // Output it to an excel file.
-    XLSX.writeFile(workbook, "license_data.xlsx");
+    XLSX.writeFile(workbook, "dataset_registry_table.xlsx");
   }
 </script>
 <!-- jQuery -->
@@ -71,12 +78,11 @@
 <br />
 <p1
   >Welcome to the member's only zone where you can view all the available
-  license data. To view the information for the individual datasets please click
-  the button below.</p1
+  datasets below. To view all the data hit the button below.</p1
 >
 <div class="mb-5">
-  <a class="btn btn-primary btn-sm px-2" href="{% url 'available_datasets' %}"
-    >Datasets Overview</a
+  <a class="btn btn-primary btn-sm px-2" href="{% url 'member_zone' %}"
+    >All Data</a
   >
   <br />
   <br />
@@ -87,7 +93,7 @@
   <br />
   <br />
   <table
-    id="license_data_table"
+    id="dataset_registry_table"
     border="1"
     data-toggle="table"
     data-sortable="true"
@@ -95,22 +101,27 @@
     data-page-size="10"
     data-page-list="[10, 25, 50, 100, ALL]"
     data-search="true"
-    class="table table-hover sortable"
+    class="table table-hover sortable table-sm"
   >
     <thead>
       <tr>
-        <th scope="col" data-sortable="true">ID</th>
-        <th scope="col" data-sortable="true">First Name</th>
-        <th scope="col" data-sortable="true">Last Name</th>
-        <th scope="col" data-sortable="true">Date of Birth</th>
-        <th scope="col" data-sortable="true">Place of Birth</th>
-        <th scope="col" data-sortable="true">Gender</th>
-        <th scope="col" data-sortable="true">Date of Issue</th>
-        <th scope="col" data-sortable="true">Date of Expiry</th>
-        <th scope="col" data-sortable="true">Issuing Authority</th>
-        <th scope="col" data-sortable="true">License Number</th>
-        <th scope="col" data-sortable="true">Address</th>
-        <th scope="col" data-sortable="true">Dataset</th>
+        <th scope="col" data-sortable="true">Dataset ID</th>
+        <th scope="col" data-sortable="true">Dataset Name</th>
+        <th scope="col" data-sortable="true">Total Entries</th>
+        <th scope="col" data-sortable="true">Corrupt?</th>
+        <th scope="col" data-sortable="true">Corruption Percentage</th>
+        <th scope="col" data-sortable="true">Creation Time</th>
+        <th scope="col" data-sortable="true">First Name Corruption</th>
+        <th scope="col" data-sortable="true">Last Name Corruption</th>
+        <th scope="col" data-sortable="true">Date of Birth Corruption</th>
+        <th scope="col" data-sortable="true">Place of Birth Corruption</th>
+        <th scope="col" data-sortable="true">Gender Corruption</th>
+        <th scope="col" data-sortable="true">Date of Issue Corruption</th>
+        <th scope="col" data-sortable="true">Date of Expiry Corruption</th>
+        <th scope="col" data-sortable="true">Issuing Authority Corruption</th>
+        <th scope="col" data-sortable="true">License Number Corruption</th>
+        <th scope="col" data-sortable="true">Address Corruption</th>
+        <th scope="col" data-sortable="true">Additional Metadata</th>
         <th data-checkbox="true"></th>
       </tr>
     </thead>
@@ -129,13 +140,18 @@
         <td>{{ entry.9 }}</td>
         <td>{{ entry.10 }}</td>
         <td>{{ entry.11 }}</td>
+        <td>{{ entry.12 }}</td>
+        <td>{{ entry.13 }}</td>
+        <td>{{ entry.14 }}</td>
+        <td>{{ entry.15 }}</td>
+        <td>{{ entry.16 }}</td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
   <script>
     $(document).ready(function () {
-      $("#license_data_table").bootstrapTable();
+      $("#dataset_registry_table").bootstrapTable();
     });
   </script>
   {% else %}
