--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,16 +1,25 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <style>
   .background-image {
     position: fixed;
     top: 0;
     left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    background: url('https://images.pexels.com/photos/1366942/pexels-photo-1366942.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center fixed;
+    width: 100%;
+    height: 100%;
+    background: url("https://images.pexels.com/photos/1366942/pexels-photo-1366942.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")
+      no-repeat center center fixed;
     background-size: cover;
-    opacity: 0.9;
+    z-index: -1;
+  }
+
+  .background-image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.4); 
     z-index: -1;
   }
 
@@ -21,6 +30,7 @@
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
+    z-index: 1;
   }
 </style>
 
@@ -33,9 +43,11 @@
   </p>
   <p class="fs-5">Hit the button below to start exploring.</p>
   {% if user.is_authenticated %}
-    <a class="btn btn-primary btn-sm px-2" href="{% url 'member_zone' %}">Member Zone</a>
+  <a class="btn btn-primary btn-sm px-2" href="{% url 'member_zone' %}"
+    >Member Zone</a
+  >
   {% else %}
-    <a class="btn btn-primary btn-sm px-2" href="{% url 'login' %}">Login</a>
+  <a class="btn btn-primary btn-sm px-2" href="{% url 'login' %}">Login</a>
   {% endif %}
 </div>
 
